Print all courses individually using Streams, Lambda Expressions and Method Reference.